style.css
:root {
    font-family: 'Jersey 10';
    color: white;
    background-image: linear-gradient(180deg,rgba(54, 0, 0, 1) 0%, rgba(61, 61, 0, 1) 33%, rgba(0, 61, 0, 1) 66%, rgba(0, 0, 64, 1) 100%);
}

button {
    font-family: 'Jersey 10';
}

.download-button {
    width: 200px;
    height: 200px;
    background-color: transparent;
    background-repeat: no-repeat;
    background-size: cover;

    scale: 1;
    transition: scale 0.1s;
}
    .download-button:hover {
        scale: 1.1;
        transition: scale 0.1s;
    }

.centered {
    align-self: center;
}

.section {
    background-color: rgba(0, 0, 0, 0.5);
    padding: 5px;
}

.nearest-neighbor {
    image-rendering: pixelated;
}

.video {
    box-shadow: 0px 0px 100px 30px rgba(255,255,255,0.75);
}

.logo {
    align-self: center;
    width: 500px;
    animation: logoAnim 5s infinite;
    scale: 1;
    transition: scale 0.1s;
}
    .logo:hover {
        align-self: center;
        width: 500px;
        animation: logoAnim 5s infinite;
        scale: 1.1;
        transition: scale 0.1s;
    }

@keyframes logoAnim {
    0% {
        rotate: -2deg;
    }

    50% {
        rotate: 2deg;
    }

    100% {
        rotate: -2deg;
    }
}

.vbox {
    display: flex;
    flex-direction: column;
    align-self: center;
    align-content: center;
    gap: 10px;
}

.hbox {
    display: flex;
    flex-direction: row;
    align-self: center;
    align-content: center;
    gap: 10px;
}

